--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@ document.addEventListener('DOMContentLoaded', function() {
                       </button>
                     </a>
                   </li>
+                                    <li class="list-inline-item">
+                    <a href="https://github.com/jrash/jrash.github.io/tree/master/jeremy_ash_cv.pdf">
+                      <button type="button" class="btn btn-outline-dark mb-2">
+                        CV
+                      </button>
+                    </a>
+                  </li>
                                   </ul>
               </div>
             </div>
@@ -183,6 +190,11 @@ document.addEventListener('DOMContentLoaded', function() {
                                     <a href="mailto:jeremyryanash@gmail.com">
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                       Email
+                    </button>
+                  </a>
+                                    <a href="https://github.com/jrash/jrash.github.io/tree/master/jeremy_ash_cv.pdf">
+                    <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                      CV
                     </button>
                   </a>
                                   </div>
