Fix cv location

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@ document.addEventListener('DOMContentLoaded', function(e) {
             <h2>Experience</h2>
             <p><strong>SAS</strong> | Research Statistician in JMP
             R&amp;D | Jan 2020 - Feb 2022</p>
-            <p><strong>Janssen Pharmaceutical Companies of Johnson &amp;
-            Johnson</strong> | AI/ML Drug Discovery Data Scientist | Feb
-            2022 - PRESENT</p>
+            <p><strong>Johnson &amp; Johnson Innovative
+            Medicine</strong> | AI/ML Drug Discovery Data Scientist |
+            Feb 2022 - PRESENT</p>
             </div>
           </div>
         </div>
@@ -185,9 +185,9 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <h2>Experience</h2>
               <p><strong>SAS</strong> | Research Statistician in JMP
               R&amp;D | Jan 2020 - Feb 2022</p>
-              <p><strong>Janssen Pharmaceutical Companies of Johnson
-              &amp; Johnson</strong> | AI/ML Drug Discovery Data
-              Scientist | Feb 2022 - PRESENT</p>
+              <p><strong>Johnson &amp; Johnson Innovative
+              Medicine</strong> | AI/ML Drug Discovery Data Scientist |
+              Feb 2022 - PRESENT</p>
               </div>
             </div>
         </div>
